# dub

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
dub/: config.py  main.py  worker.py
dub/api/: routes.py
dub/models/: enums.py  schemas.py
dub/pipeline/: context.py  orchestrator.py
dub/providers/: factory.py  protocols.py
dub/providers/audio/: assembler.py  duration.py  extractor.py  speed.py
dub/providers/evaluation/: gemini_audio.py
dub/providers/separation/: sam_audio.py
dub/providers/stt/: qwen.py  whisper.py
dub/providers/translation/: gemini.py
dub/providers/tts/: fish_audio.py  voice_clone.py
dub/tasks/: broker.py  dubbing.py
http/: api.http
sam-audio/: README.md  server.py
tests/: test_gemini_translation.py
